# EDMW-Modding-Tools

./: CMakeLists.txt  LICENSE  README.md  settings.ini
.github/workflows/: build-and-release.yml
db/: dbactiontable.xml  dbaiunittargeting.xml  dbambientsounds.xml  dbanimals.xml  dbareaeffect.xml  dbbuttons.xml  dbcalamity.xml  dbcivpowers.xml  dbcivspecai.xml  dbcivspecificunitdefines.xml  dbcolortable.xml  dbeffects.xml  dbfamily.xml  dbgamevariant.xml  dbgfxeffects.xml  dbmousepointer.xml  dbmusic.xml  dbnewgfxeffecttable.xml  dbobjects.xml  dbphoenixcivtable.xml  dbpremadecivs.xml  dbrandommap.xml.TODO  dbspecialunittable.xml  dbstartingresources.xml  dbtechtree.xml  dbterraineffects.xml  dbterraintype.xml  dbuiback.xml  dbuicontrolevents.xml  dbuicontrols.xml  dbuifonts.xml  dbuiforms.xml  dbuihotkey.xml  dbunitbehavior.xml  dbunitset.xml  dbupgrade.xml  dbweapontohit.xml  dbworld.xml
include/: EDMW_DBCollection.hpp  EDMW_DBObject.hpp  EDMW_Database.hpp  EDMW_ObjectSchema.hpp
src_db_editor/: CMakeLists.txt  DB.cpp  DB.hpp  DBEntry.cpp  DBEntry.hpp  DBField.cpp  DBManager.cpp  DBManager.hpp  ItemFieldsController.cpp  ItemFieldsController.hpp  MainWindow.cpp  MainWindow.hpp  StandardDB.cpp  StandardDB.hpp  StandardDBController.cpp  StandardDBController.hpp  UnknownCountDB.cpp  definitions.hpp  main.cpp
src_db_editor/_old_code/: CDbAIUnitTargeting.cpp  CDbAIUnitTargeting.h  CDbAmbientSoundsManager.cpp  CDbAmbientSoundsManager.h  CDbAnimalsManager.cpp  CDbAnimalsManager.h  CDbAreaEffectManager.cpp  CDbAreaEffectManager.h  CDbButtonsManager.cpp  CDbButtonsManager.h  CDbCalamityManager.cpp  CDbCalamityManager.h  CDbCivSpecAIManager.cpp  CDbCivSpecAIManager.h  CDbColorTableManager.cpp  CDbColorTableManager.h  CDbFamilyManager.cpp  CDbFamilyManager.h  CDbGFXEffectsManager.cpp  CDbGFXEffectsManager.h  CDbGraphicsManager.cpp  CDbGraphicsManager.h  CDbMousePointerManager.cpp  CDbMousePointerManager.h  CDbMusicManager.cpp  CDbMusicManager.h  CDbObjectsManager.cpp  CDbObjectsManager.h  CDbPhoenixCivTableManager.cpp  CDbPhoenixCivTableManager.h  CDbPremadecivsManager.cpp  CDbPremadecivsManager.h  CDbRandomMapManager.cpp  CDbRandomMapManager.h  (+21 more)
src_dbdump/: main.cpp
src_lib/: EDMW_Database.cpp  EDMW_ObjectSchema.cpp
src_ssaEdit/: CMakeLists.txt  SSA.h  decompress.cpp  extract.cpp  main.cpp  pack.cpp
(+23 files in other folders)
